fix: remove chart page scrollbar

--- a/src/legacy/components/Common.module.css
+++ b/src/legacy/components/Common.module.css
@@ -6,8 +6,6 @@
 
 .contentcontainer {
   width: calc(100% - 220px);
-  height: 100vh;
-  overflow-y: scroll;
   float: right;
 }
 
